--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,9 @@
 name: Sell
-api: 2.0.0
+api: [3.0.0-ALPHA5, 3.0.0-ALPHA6, 3.0.0, 3.0.1]
 main: SellHand\Main
 version: 2.0
 author: Muqsit
-authors: [KairusDarkSeeker]
+authors: [KairusDarkSeeker & Zeao]
 commands:
   sell:
     description: "Sells the item in your hand or all of your inventory's contents"
