--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: Sell
-api: [3.0.0-ALPHA8]
+api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9]
 main: SellHand\Main
-version: 2.0
+version: 2.1-ALPHA8
 author: Muqsit
 authors: [KairusDarkSeeker, Zeao]
 commands:
